--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </section>
         <section>
           <h3>Creador de Vue</h3>
-          <h5>Evan You</h5><img src="/img/evan-you.jpg" alt="Evan You" wight="200" height="200"/>
+          <h5>Evan You</h5><img src="img/evan-you.jpg" alt="Evan You" wight="200" height="200"/>
         </section>
         <section>
           <h3>Historia</h3>
@@ -543,7 +543,7 @@
         </section>
         <section>
           <section>
-            <h1>Componetes</h1><img src="/img/bloque.png" alt="Componentes" height="250" width="250"/>
+            <h1>Componetes</h1><img src="img/bloque.png" alt="Componentes" height="250" width="250"/>
           </section>
           <section data-menu-title="Introducción #1">
             <h3>Introducción</h3>
@@ -629,10 +629,10 @@ var app = new Vue({
             </ul>
           </section>
           <section>
-            <h3>Vue Proyecto</h3><img src="/img/vue-project.png" alt="Vue Project"/>
+            <h3>Vue Proyecto</h3><img src="img/vue-project.png" alt="Vue Project"/>
           </section>
           <section>
-            <h3>Vue App</h3><img src="/img/vue-app.png" alt="Vue App" width="320" height="300"/>
+            <h3>Vue App</h3><img src="img/vue-app.png" alt="Vue App" width="320" height="300"/>
           </section>
           <section>
             <h3>Vue Index</h3>
@@ -658,10 +658,10 @@ new Vue({
 })</code></pre>
           </section>
           <section>Single-File
-            <h3>Single-File Components</h3><img src="/img/single-file.png" alt="Single File" width="250" height="300"/>
+            <h3>Single-File Components</h3><img src="img/single-file.png" alt="Single File" width="250" height="300"/>
           </section>
           <section>
-            <h3>Crear Componentes</h3><img src="/img/crear-components1.png" alt="Crear-Components 1"/>
+            <h3>Crear Componentes</h3><img src="img/crear-components1.png" alt="Crear-Components 1"/>
           </section>
           <section>
             <h3>Componente Box1</h3>
@@ -1236,7 +1236,7 @@ destroyed: function() {
             <h1>Vue-Router</h1>
           </section>
           <section>
-            <h3>SPA</h3><img src="/img/spa.png"/>
+            <h3>SPA</h3><img src="img/spa.png"/>
           </section>
           <section>
             <h3>Qué es?</h3>
@@ -1870,6 +1870,11 @@ methods: {
         {{ mensaje.contenido }}
     &lt;/v-list-tile-content&gt;
 &lt;/v-list-tile&gt;</code></pre>
+          </section>
+        </section>
+        <section>
+          <section>
+            <h1>Mini-Proyecto</h1>
           </section>
         </section>
       </div>
